unpackaged/main/default/objects/Override__c/Override__c.object-meta.xml
<CustomObject>
    <label>Override</label>
    <nameField>
        <displayFormat>O - {0000000000}</displayFormat>
        <label>Override Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>