unpackaged/main/default/objects/Override__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <label>Approver Email</label>
    <type>Email</type>
</CustomField>