unpackaged/main/default/objects/Override__c/fields/Funding_Option__c.field-meta.xml
<CustomField>
    <fullName>Funding_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Option</label>
    <referenceTo>Funding_Options__c</referenceTo>
    <relationshipLabel>Overrides</relationshipLabel>
    <relationshipName>Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>