unpackaged/main/default/objects/Override__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Overrides</relationshipLabel>
    <relationshipName>Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>